Fix clicking Help button gives 404 page in browser

Issue: With khelpcenter unavailable, clicking Help button in knetattach opens URL: https://docs.kde.org/stable5/en/kde-workspace/knetattach//knetattach resulting in 404 (Not found) page.

Fix: change help string from `help:/knetattach` to `help:/`.

How it works: at https://invent.kde.org/frameworks/kguiaddons/-/blob/master/src/util/urlhandler.cpp#L48 - the appname is added by default to docpath. With `help:/knetattach` the docpath becomes `knetattach&path=/knetattach` which results in URL: https://docs.kde.org/stable5/en/kde-workspace/knetattach//knetattach.

Removing `/knetattach` from `help:/knetattach` makes final URL as: https://docs.kde.org/stable5/en/kde-workspace/knetattach// (Notice the additional `/` at the end coming from `help:/`). This works for both browser URL as well as khelpcenter.

BUG: 425321